Onboarding: Fix plan picker comparison table width on large displays (#48112)
* Fix width

* Move break to mixins

* Add padding to the right side when scrolling

* Move padding from container to the plans table itself, and remove unnecessary width rules

* Use breakpoint variable insead of hardcoded number

* Fix: set margin and padding to 0 on huge screens

This is mainly a fix for gutenboarding, as otherwise the table was already
working fine in Step by step flow.

* Fix: media query breakpoint overlap

--- a/packages/plans-grid/src/plans-details/style.scss
+++ b/packages/plans-grid/src/plans-details/style.scss
@@ -2,12 +2,37 @@
 @import '~@wordpress/base-styles/mixins';
 @import '~@automattic/onboarding/styles/mixins';
 @import '~@automattic/typography/styles/variables';
+@import '../variables';
+
+// Used to "counter" the negative margin set on the container, while allowing the
+// table to scroll horizontally in case it doesn't fit in the viewport.
+@mixin plans-grid-edge2edge-padding {
+	padding-left: $onboarding-block-margin-mobile;
+	padding-right: $onboarding-block-margin-mobile;
+
+	@include break-small {
+		padding-left: $onboarding-block-margin-small;
+		padding-right: $onboarding-block-margin-small;
+	}
+
+	@include break-medium {
+		padding-left: $onboarding-block-margin-medium;
+		padding-right: $onboarding-block-margin-medium;
+	}
+
+	@media ( min-width: $plans-grid-max-page-width ) {
+		padding-left: 0;
+		padding-right: 0;
+	}
+}
 
 .plans-grid__details-heading {
 	margin-bottom: 20px;
 }
 
 .plans-details__table {
+	@include plans-grid-edge2edge-padding;
+
 	width: 100%;
 	border-spacing: 0;
 
